Fix issue with dragon scaling too large.

--- a/src/styles/components/pages/landingPages/steps.scss
+++ b/src/styles/components/pages/landingPages/steps.scss
@@ -46,6 +46,8 @@
 
     .dragon {
       align-self: flex-end;
+      max-height: 22vh;
+      padding: 0 2rem;
     }
 
     .container {
